# ds-store-dump

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-poetry.yml
ds_store_dump/: DSStoreDumper.py  __main__.py  cli.py  log.py
ds_store_dump/utils/: logging.py  termcolors.py
dsstore_dump/: __init__.py
dsstore_dump/utils/: color_log.py  decorators.py
