[tool.poetry]
name = "ds-store-dump"
version = "0.1.2"
description = "Dump backups and another files using .DS_Store"
authors = ["tz4678 <tz4678@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
ds-store = "^1.3.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ds-store-dump = "ds-store-dump:cli"
